--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 logging.level.org.springframework.web=TRACE
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/productservicedecmwfeve
 spring.datasource.username=productservicedecmwfeve
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
